--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -24,6 +24,7 @@ h2 {
     float:right;
     width: 100px;
     text-align: right;
+    border: 2px solid black;
 }
 
 #first {
@@ -56,7 +57,7 @@ body {
 @media (min-width: 992px) {
   .forlarge {
     float: left;
-    border: 2px solid red;
+    border: 2px solid black;
     background-color: yellow;
     width: 30%;
     height: 320px;
@@ -85,7 +86,7 @@ body {
     
     .formedium {  
     float:left;
-    border: 2px solid red;
+    border: 2px solid black;
     background-color: yellow;
     height: 300px;
     margin-right: 5px;
@@ -101,7 +102,7 @@ body {
 @media (max-width: 767px) {
   .forsmall {
     
-    border: 2px solid red;
+    border: 2px solid black;
     background-color: yellow;
     width: 95%;
     height: 300px;
